--- a/miyadaiku-hands-on.html
+++ b/miyadaiku-hands-on.html
@@ -38,12 +38,11 @@
 
   <div class="article-body">
     <div class="header_target" id="h__miyadaiku_2dhands_2don_2emd_1"></div><h1>miyadaiku hands-on 参加して来た</h1>
-<p>2018.04.10に行われた「くろのて勉強会」の"Miyadaikuでブログを作ろう！"に参加してきました。御察しの通り、このブログはMiyadaiku
-で作成しています。</p>
+<p>2018.04.10に行われた「くろのて勉強会」の"Miyadaikuでブログを作ろう！"に参加してきました。御察しの通り、このブログはMiyadaikuで作成しています。</p>
 <div class="header_target" id="h__miyadaiku_2dhands_2don_2emd_2"></div><h2>参加目的</h2>
 <p>LTネタも集まって来たので、ブログで公開できるようにしたい。せっかくなので、pythonでブログを作れる物を探していたら見つけた。</p>
-<div class="header_target" id="h__miyadaiku_2dhands_2don_2emd_3"></div><h2>以下略</h2>
-<p>この記事はダミーです。後で消しますので、偶然このページを見つけた人は忘れてください。</p>
+<div class="header_target" id="h__miyadaiku_2dhands_2don_2emd_3"></div><h2>以下略</h2>
+<p>この記事はダミーです。後で消しますので、偶然このページを見つけた人は忘れてください。</p>
   </div>
 
     </div>
