--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
   </div>
       <h2 class="article-title"><a href="sample.html">Hello, world. Read me first.</a></h2>
       <div class="article-body"><div class="header_target" id="h__sample_2emd_1"></div><h1>はじめに</h1>
-<p>初めまして。2casaです。</p>
+<p>初めまして。2casaです。</p>
 <p>このブログは金融やお金、それらを支える技術について調べた内容をまとめた自分用の備忘録です。</p>
 <p>金融とは直接縁がなさそうな技術をテーマにする場合は、無理やりにでも金融ネタとこじつけていく所存です。</p>
-<p>金融とお金がテーマですが、いわゆる「お金になるハナシ」は多分出てきません。</p>
-<div class="header_target" id="h__sample_2emd_2"></div><h2>免責事項</h2>
+<p>金融とお金がテーマですが、いわゆる「お金になるハナシ」は多分出てきません。</p>
+<div class="header_target" id="h__sample_2emd_2"></div><h2>免責事項</h2>
 <ul>
 <li>本ブログの記事は全て個人の見解であり、所属組織とは一切関係ありません。</li>
-<li>本ブログに記載された記事を参考にして被ったいかなる損害についても、責任を負うものではありません。</li>
+<li>本ブログに記載された記事を参考にして被ったいかなる損害についても、責任を負うものではありません。</li>
 </ul></div>
     
       <div class="article-metadata">
@@ -54,12 +54,11 @@
   </div>
       <h2 class="article-title"><a href="miyadaiku-hands-on.html">ハンズオン参加記録</a></h2>
       <div class="article-body"><div class="header_target" id="h__miyadaiku_2dhands_2don_2emd_1"></div><h1>miyadaiku hands-on 参加して来た</h1>
-<p>2018.04.10に行われた「くろのて勉強会」の"Miyadaikuでブログを作ろう！"に参加してきました。御察しの通り、このブログはMiyadaiku
-で作成しています。</p>
+<p>2018.04.10に行われた「くろのて勉強会」の"Miyadaikuでブログを作ろう！"に参加してきました。御察しの通り、このブログはMiyadaikuで作成しています。</p>
 <div class="header_target" id="h__miyadaiku_2dhands_2don_2emd_2"></div><h2>参加目的</h2>
 <p>LTネタも集まって来たので、ブログで公開できるようにしたい。せっかくなので、pythonでブログを作れる物を探していたら見つけた。</p>
-<div class="header_target" id="h__miyadaiku_2dhands_2don_2emd_3"></div><h2>以下略</h2>
-<p>この記事はダミーです。後で消しますので、偶然このページを見つけた人は忘れてください。</p></div>
+<div class="header_target" id="h__miyadaiku_2dhands_2don_2emd_3"></div><h2>以下略</h2>
+<p>この記事はダミーです。後で消しますので、偶然このページを見つけた人は忘れてください。</p></div>
     
   </div>
 
