--- a/index_tag_tags_更新情報.html
+++ b/index_tag_tags_更新情報.html
@@ -37,14 +37,14 @@
   </div>
       <h2 class="article-title"><a href="sample.html">Hello, world. Read me first.</a></h2>
       <div class="article-body"><div class="header_target" id="h__sample_2emd_1"></div><h1>はじめに</h1>
-<p>初めまして。2casaです。</p>
+<p>初めまして。2casaです。</p>
 <p>このブログは金融やお金、それらを支える技術について調べた内容をまとめた自分用の備忘録です。</p>
 <p>金融とは直接縁がなさそうな技術をテーマにする場合は、無理やりにでも金融ネタとこじつけていく所存です。</p>
-<p>金融とお金がテーマですが、いわゆる「お金になるハナシ」は多分出てきません。</p>
-<div class="header_target" id="h__sample_2emd_2"></div><h2>免責事項</h2>
+<p>金融とお金がテーマですが、いわゆる「お金になるハナシ」は多分出てきません。</p>
+<div class="header_target" id="h__sample_2emd_2"></div><h2>免責事項</h2>
 <ul>
 <li>本ブログの記事は全て個人の見解であり、所属組織とは一切関係ありません。</li>
-<li>本ブログに記載された記事を参考にして被ったいかなる損害についても、責任を負うものではありません。</li>
+<li>本ブログに記載された記事を参考にして被ったいかなる損害についても、責任を負うものではありません。</li>
 </ul></div>
     
   </div>
