--- a/index_category_category_サイト更新.html
+++ b/index_category_category_サイト更新.html
@@ -11844,7 +11844,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>$$\sum_{k=1}^{n} k=\frac{n(n+1)}{2}$$</p>
+<p>$$\sum_{k=1}^{n} k =\frac{n(n+1)}{2}$$</p>
 </div>
 </div>
 </div>
@@ -11900,6 +11900,12 @@ div#notebook {
           <li>
             <a href="index_category_category_サイト更新.html">
               サイト更新
+            </a>
+          </li>
+        
+          <li>
+            <a href="index_category_category_デリバティブ.html">
+              デリバティブ
             </a>
           </li>
         
