--- a/index_tag_tags_更新情報.html
+++ b/index_tag_tags_更新情報.html
@@ -11843,6 +11843,12 @@ div#notebook {
             </a>
           </li>
         
+          <li>
+            <a href="index_category_category_デリバティブ.html">
+              デリバティブ
+            </a>
+          </li>
+        
       </ul>
 
       Tags:
