--- a/Introducing Quantopian Fundamental Data .html
+++ b/Introducing Quantopian Fundamental Data .html
@@ -9,7 +9,7 @@
   
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jupyter NotebookをMiyadaikuで表示させる - Money and Code</title>
+    <title>Balance Sheet - Money and Code</title>
   
   <link rel="stylesheet" href="static/css/style.css">
 
@@ -11792,12 +11792,12 @@ div#notebook {
     <div class="container-body">
       
   <div class="article-metadata">
-    <span class="article-date"> 2018-05-26 </span>
-    <span> サイト更新 </span>
-    <span> miyadaiku,python,jupyter </span>
+    <span class="article-date">  </span>
+    <span>  </span>
+    <span>  </span>
   </div>
   <h1 class="article-title">
-    Jupyter NotebookをMiyadaikuで表示させる
+    Balance Sheet
   </h1>
 
   <div class="article-body">
@@ -11806,91 +11806,51 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Miyadaikuを使いたいと思った理由の一つに、"Jupyter Notebook"で作成したノートブック(.ipynb)から直接HTMLファイルを生成できるという点である。このページはその一例である。</p>
-<p>pythonコードは以下のように表示できる。</p>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In [3]:</div>
-<div class="inner_cell">
-<div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="nb">print</span><span class="p">(</span><span class="s2">"hello, world!"</span><span class="p">)</span>
-</pre></div>
-</div>
-</div>
-</div>
-<div class="output_wrapper">
-<div class="output">
-<div class="output_area">
-<div class="prompt"></div>
-<div class="output_subarea output_stream output_stdout output_text">
-<pre>hello, world!
-</pre>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>また、数式もTeXによって綺麗に表示できるというのも素晴らしい。</p>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>$$\sum_{k=1}^{n} k =\frac{n(n+1)}{2}$$</p>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>そのほかマークダウン記法として、箇条書きやテーブルも表現できる。</p>
-<ul>
-<li>箇条書き<ul>
-<li>インデント落とす<ul>
-<li>インデント落とす</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-<div class="header_target" id="h__Miyadaiku_2djupyter_2dsample_2eipynb_1"></div><h3 id="テーブル">テーブル<a class="anchor-link" href="#テーブル">¶</a></h3><table>
+<div class="header_target" id="h__Introducing_20Quantopian_20Fundamental_20Data_20_2eipynb_1"></div><h1 id="Balance-Sheet">Balance Sheet<a class="anchor-link" href="#Balance-Sheet">¶</a></h1><table>
 <thead><tr>
-<th style="text-align:center">市場略称</th>
-<th>取引所</th>
-<th style="text-align:left">取り扱い商品</th>
+<th>項目名</th>
+<th style="text-align:center">日本語</th>
+<th style="text-align:left">備考</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style="text-align:center">TSE</td>
-<td>東京証券取引所</td>
-<td style="text-align:left">株式・ETF</td>
+<td>accounts_payable</td>
+<td style="text-align:center">買掛金</td>
+<td style="text-align:left"></td>
 </tr>
 <tr>
-<td style="text-align:center">OSE</td>
-<td>大阪取引所</td>
-<td style="text-align:left">先物・オプション・国債</td>
+<td>accounts_receivable</td>
+<td style="text-align:center">売掛金</td>
+<td style="text-align:left"></td>
+</tr>
+<tr>
+<td>accrued_interest_receivable</td>
+<td style="text-align:center">未収利息</td>
+<td style="text-align:left"></td>
+</tr>
+<tr>
+<td>accured_inestment_income</td>
+<td style="text-align:center">未収投資利益</td>
+<td style="text-align:left"></td>
+</tr>
+<tr>
+<td>accrued_liabilites_total</td>
+<td style="text-align:center">未払い負債合計</td>
+<td style="text-align:left"></td>
+</tr>
+<tr>
+<td>accruedand_deferred_income</td>
+<td style="text-align:center">未収利息および繰延収益</td>
+<td style="text-align:left">"accruedand" = "accrued and"</td>
+</tr>
+<tr>
+<td>accruedand_deferred_income_current</td>
+<td style="text-align:center">１年以内未収利息および繰延収益</td>
+<td style="text-align:left">Sum of Accrued Liabilities and Deferred Income due within 1 year.</td>
 </tr>
 </tbody>
 </table>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>テーブルについては、もう少し表現力があると嬉しいのだが、とにかくもまぁ、jupyterで簡単に書くことができるのである。</p>
 </div>
 </div>
 </div>
