ファイル修正

--- a/index.html
+++ b/index.html
@@ -11799,13 +11799,13 @@ div#notebook {
     <span> デリバティブ </span>
     <span> miyadaiku,python,jupyter </span>
   </div>
-      <h2 class="article-title"><a href="個別銘柄のSPANパラメータを取得する。.html">個別銘柄のSPANパラメータを取得する</a></h2>
+      <h2 class="article-title"><a href="getting-spanparams-from-pa2.html">個別銘柄のSPANパラメータを取得する</a></h2>
       <div class="article-body"><div>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<div class="header_target" id="h___500b_5225_9298_67c4_306eSPAN_30cf_309a_30e9_30e1_30fc_30bf_3092_53d6_5f97_3059_308b_3002_2eipynb_1"></div><h1 id="個別銘柄のSPANパラメータを取得する">個別銘柄のSPANパラメータを取得する<a class="anchor-link" href="#個別銘柄のSPANパラメータを取得する">¶</a></h1><p>JPXにおける派生商品取引にかかる証拠金所要額は、シカゴ・マーカンタイル取引所（CME）が開発しライセンス保有しているSPAN(R)モデルに基づいて算出される。SPANパラメータファイルの仕様はJPXのサイトで<a href="https://www.jpx.co.jp/jscc/seisan/sakimono/shokokin_seido/span_file.html">公表</a>されている。</p>
+<div class="header_target" id="h__getting_2dspanparams_2dfrom_2dpa2_2eipynb_1"></div><h1 id="個別銘柄のSPANパラメータを取得する">個別銘柄のSPANパラメータを取得する<a class="anchor-link" href="#個別銘柄のSPANパラメータを取得する">¶</a></h1><p>JPXにおける派生商品取引にかかる証拠金所要額は、シカゴ・マーカンタイル取引所（CME）が開発しライセンス保有しているSPAN(R)モデルに基づいて算出される。SPANパラメータファイルの仕様はJPXのサイトで<a href="https://www.jpx.co.jp/jscc/seisan/sakimono/shokokin_seido/span_file.html">公表</a>されている。</p>
 <p>そこで、SPANパラメータファイルの仕様を参考に、実際に<a href="https://www.jpx.co.jp/jscc/seisan/sakimono/shokokin_seido/span_data/parameter.html">公開</a>しているファイルを読み込み、個別銘柄のSPANパラメータを取り出すサンプルプログラム（span_pa2file）を作成してみた。</p>
 </div>
 </div>
@@ -11932,58 +11932,6 @@ div#notebook {
 <p>LTネタも集まって来たので、ブログで公開できるようにしたい。せっかくなので、pythonでブログを作れる物を探していたら見つけた。</p>
 <div class="header_target" id="h__miyadaiku_2dhands_2don_2emd_3"></div><h2>以下略</h2>
 <p>この記事はダミーです。後で消しますので、偶然このページを見つけた人は忘れてください。</p></div>
-    
-      <div class="article-metadata">
-    <span class="article-date">  </span>
-    <span>  </span>
-    <span>  </span>
-  </div>
-      <h2 class="article-title"><a href="Introducing Quantopian Fundamental Data .html">Balance Sheet</a></h2>
-      <div class="article-body"><div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<div class="header_target" id="h__Introducing_20Quantopian_20Fundamental_20Data_20_2eipynb_1"></div><h1 id="Balance-Sheet">Balance Sheet<a class="anchor-link" href="#Balance-Sheet">¶</a></h1><table>
-<thead><tr>
-<th>項目名</th>
-<th style="text-align:center">日本語</th>
-<th style="text-align:left">備考</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>accounts_payable</td>
-<td style="text-align:center">買掛金</td>
-<td style="text-align:left"></td>
-</tr>
-<tr>
-<td>accounts_receivable</td>
-<td style="text-align:center">売掛金</td>
-<td style="text-align:left"></td>
-</tr>
-<tr>
-<td>accrued_interest_receivable</td>
-<td style="text-align:center">未収利息</td>
-<td style="text-align:left"></td>
-</tr>
-<tr>
-<td>accured_inestment_income</td>
-<td style="text-align:center">未収投資利益</td>
-<td style="text-align:left"></td>
-</tr>
-<tr>
-<td>accrued_liabilites_total</td>
-<td style="text-align:center">未払い負債合計</td>
-<td style="text-align:left"></td>
-</tr>
-<tr>
-<td>accruedand_deferred_income</td>
-<td style="text-align:center">未収利息および繰延収益</td>
-<td style="text-align:left">"accruedand" = "accrued and"</td>
-</tr>
-<tr>
-<td>accruedand_deferred_income_current</td></tr></tbody></table></div></div></div></div></div>
     
   </div>
 
