コンテンツ修正

--- a/index_category_category_サイト更新.html
+++ b/index_category_category_サイト更新.html
@@ -11916,6 +11916,12 @@ div#notebook {
       <ul>
         
           <li>
+            <a href="index_tag_tags_SPAN.html">
+              SPAN
+            </a>
+          </li>
+        
+          <li>
             <a href="index_tag_tags_jupyter.html">
               jupyter
             </a>
