--- a/Miyadaiku-jupyter-sample.html
+++ b/Miyadaiku-jupyter-sample.html
@@ -11929,6 +11929,12 @@ div#notebook {
       <ul>
         
           <li>
+            <a href="index_tag_tags_SPAN.html">
+              SPAN
+            </a>
+          </li>
+        
+          <li>
             <a href="index_tag_tags_jupyter.html">
               jupyter
             </a>
