--- a/finpy15.html
+++ b/finpy15.html
@@ -11898,6 +11898,12 @@ div#notebook {
       <ul>
         
           <li>
+            <a href="index_tag_tags_SPAN.html">
+              SPAN
+            </a>
+          </li>
+        
+          <li>
             <a href="index_tag_tags_jupyter.html">
               jupyter
             </a>
