--- a/index_category_category_イベント参加レポート.html
+++ b/index_category_category_イベント参加レポート.html
@@ -11878,6 +11878,12 @@ div#notebook {
       <ul>
         
           <li>
+            <a href="index_tag_tags_SPAN.html">
+              SPAN
+            </a>
+          </li>
+        
+          <li>
             <a href="index_tag_tags_jupyter.html">
               jupyter
             </a>
