--- a/sample.html
+++ b/sample.html
@@ -11845,6 +11845,12 @@ div#notebook {
       <ul>
         
           <li>
+            <a href="index_tag_tags_SPAN.html">
+              SPAN
+            </a>
+          </li>
+        
+          <li>
             <a href="index_tag_tags_jupyter.html">
               jupyter
             </a>
