--- a/tags_更新情報.html
+++ b/tags_更新情報.html
@@ -11856,6 +11856,12 @@ div#notebook {
       <ul>
         
           <li>
+            <a href="index_tag_tags_SPAN.html">
+              SPAN
+            </a>
+          </li>
+        
+          <li>
             <a href="index_tag_tags_jupyter.html">
               jupyter
             </a>
